Improve LLM service: robust response parsing and HTTP connection reuse